# cookiecutter_rust_backend

./: .cookiecutterignore  LICENSE  Readme.md  cookiecutter.json
cookiecutter_project_slug/: .bacon-locations  Cargo.toml
cookiecutter_project_slug/codegen/src/: main.rs
cookiecutter_project_slug/codegen/templates/: api_controller.rs.tera  api_dto.rs.tera  api_dto_validator.rs.tera  domain_error.rs.tera  domain_service.rs.tera  infrastructure_repository.rs.tera  services.rs.tera
cookiecutter_project_slug/migrations/2025-07-15-071312_create_permission/: down.sql
cookiecutter_project_slug/migrations/2025-07-15-071317_create_role/: up.sql
cookiecutter_project_slug/migrations/2025-07-15-071320_create_role_permission/: down.sql
cookiecutter_project_slug/migrations/2025-07-25-085233_create_token/: down.sql  up.sql
cookiecutter_project_slug/migrations/2025-08-21-050315_create_todo/: down.sql
cookiecutter_project_slug/migrations/2025-08-24-052639_create_refresh_token/: down.sql  up.sql
cookiecutter_project_slug/scripts/: delete_codegen.sh  run_tests.sh
cookiecutter_project_slug/src/: container.rs  create_app.rs  lib.rs  main.rs
cookiecutter_project_slug/src/domain/: error.rs
cookiecutter_project_slug/src/infrastructure/: schema.rs
cookiecutter_project_slug/src/services/: jwt_extractor.rs  mod.rs  permission.rs  refresh_token.rs  role.rs  role_permission.rs  todo.rs  token.rs  user.rs
cookiecutter_project_slug/src/utils/: append_to_file.rs  mod.rs
{{cookiecutter.project_slug}}/: .bacon-locations  .gitignore  Cargo.toml  bacon.toml  error_logs.txt  rustfmt.toml
{{cookiecutter.project_slug}}/.cargo/: config.toml
{{cookiecutter.project_slug}}/_codegen/templates/: api_routes.rs.tera  services.rs.tera
{{cookiecutter.project_slug}}/codegen/: .bacon-locations  Cargo.toml  Readme.md  bacon.toml
{{cookiecutter.project_slug}}/codegen/src/: main.rs
{{cookiecutter.project_slug}}/codegen/templates/: api_controller.rs.tera  api_dto.rs.tera  api_mapper.rs.tera  api_routes.rs.tera  domain_error.rs.tera  domain_repository.rs.tera  domain_service.rs.tera  infrastructure_repository.rs.tera  services.rs.tera
{{cookiecutter.project_slug}}/migrations/: auth.sql
{{cookiecutter.project_slug}}/migrations/2025-07-15-071312_create_permission/: up.sql
{{cookiecutter.project_slug}}/scripts/: codegen.sh  delete_codegen.sh  git_push.sh  run_postgres.sh
{{cookiecutter.project_slug}}/src/: container.rs  create_app.rs  main.rs
{{cookiecutter.project_slug}}/src/app/: Cargo.toml
{{cookiecutter.project_slug}}/src/base/: Cargo.toml
{{cookiecutter.project_slug}}/src/domain/: constants.rs  mod.rs
{{cookiecutter.project_slug}}/src/infrastructure/: schema.rs
{{cookiecutter.project_slug}}/src/services/: role.rs  (+1 more)
(+251 files in other folders)
