[package]
name = "cookiecutter_project_slug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"

actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel_migrations = "2.2.0"
async-trait = "0.1.88"
dotenv = { version = "0.15" }
testcontainers = "0.14" 
env_logger = "0.11.0"
log = "0.4"
serde_json = "1.0"
futures-util = "0.3.26"

chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"

jsonwebtoken = "9.3.1"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
once_cell = "1.21.3"

uuid = { version = "1.17.0", features = ["serde", "v4"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
