[package]
name = "template"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "src/app",
  "src/base",
  "src/shared",
  "src/modules/auth",
]
exclude = [
  "codegen"
]

[dependencies]
base = { path = "src/base" }
shared = { path = "src/shared" }
app = { path = "src/app" }
auth = { path = "src/modules/auth" }


actix-web = "4.11.0"
