[package]
name = "base"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros", "migrate"] }
lazy_static = "1.5.0"
dotenv = { version = "0.15" }
jsonwebtoken = "9.3.1"

env_logger = "0.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
nu-ansi-term = "0.50.1" # color print
log = "0.4"

