[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]

uuid = { version = "1.17.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4.41", features = ["serde"] }
actix-web = "4.11.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros", "migrate"] }
async-trait = "0.1.88"
sha2 = "0.10"
jsonwebtoken = "9.3.1"
futures-util = "0.3.26"
hex = "0.4"

base = { path = "../../base" }
shared = { path = "../../shared" }
